--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,5 +48,7 @@ jobs:
               with:
                 context: .
                 push: true
-                tags: ghcr.io/${{ github.repository_owner }}/quiz-backend:${{ env.VERSION }}
+                tags: |
+                  ghcr.io/${{ github.repository_owner }}/quiz-backend:${{ env.VERSION }}
+                  ghcr.io/${{ github.repository_owner }}/quiz-backend:latest
                 platforms: linux/amd64,linux/arm64
