--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .DS_Store
-
+pom.xml.versionsBackup
 ### STS ###
 .apt_generated
 .classpath
